2005-01-13  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/get_args.c (show_usage): separate function to print usage
	string.
	(get_args) Call show_usage() from get_args when needed, then exit.

	* amd/get_args.c (get_version_string): print also domain, host,
	and hostd.
	(get_args): print version string at the very end, after all other
	values had been initialized.  Patch from Christos Zoulas
	<christos@zoulas.com>.

	* conf/transp/transp_sockets.c (check_pmap_up, get_nfs_version),
	conf/transp/transp_tli.c (check_pmap_up): correct an inconsistency
	in timeouts in the RPC code between socket and TLI
	implementations.  The clntudp_create timeout has a different
	meaning than the clnt_call timeout.  Set the timeout of the create
	to 2 seconds which means retry if no answer in two seconds, and
	the timeout call to 6 seconds, which will give us consistently 2
	to 3 pings.  This is useful on occasional network UDP loss where a
	single packet loss would wrongfully mark a server down.  (The TLI
	code is the one that had the problem occurs.)  Patch from Christos
	Zoulas <christos@zoulas.com>.

	* libamu/mount_fs.c (compute_nfs_attrcache_flags): make sure code
	compiles even for systems that don't have the nfs_args
	ac{reg,dir}{min,max} fields.

	* amd/amfs_toplvl.c (set_auto_attrcache_timeout): just to be safe,
	add "noac" if amd.conf option auto_attrcache was set to 0.  This
	should hopefully make the compute_nfs_attrcache_flags patch even
	safer.

	* libamu/mount_fs.c (compute_nfs_attrcache_flags): separate
	function to compute attribute-cache values.  This function now
	computes attribute-cache flags for BOTH Amd's automount points
	(NFS) as well as any normal NFS mount that Amd performs.
	(compute_nfs_args, compute_automounter_nfs_args): call
	compute_nfs_attrcache_flags to figure out attribute-cache related
	flags.  Patch from Christos Zoulas <christos@zoulas.com>.

	* scripts/amd.conf-sample: show examples of new global options
	domain_strip and auto_attrcache.
